--- a/frontend/src/components/Textarea/Textarea.css
+++ b/frontend/src/components/Textarea/Textarea.css
@@ -1,10 +1,10 @@
-.input-container {
+.textarea-container {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.label-text {
+.input-text {
   color: rgb(255, 255, 255);
   font-weight: bold;
   font-size: 18px;
