--- a/frontend/src/pages/Utilisateur/Utilisateur.css
+++ b/frontend/src/pages/Utilisateur/Utilisateur.css
@@ -30,6 +30,10 @@
   justify-content: space-around;
 }
 
+.inputUtilisateur {
+  border-radius: 20px;
+}
+
 .trait {
   border-top: 3px solid rgb(213, 43, 30);
   border-radius: 15px;
