add css home and item

--- a/frontend/src/components/Item/Item.css
+++ b/frontend/src/components/Item/Item.css
@@ -1,4 +1,11 @@
 .item {
   width: 100px;
   height: 100px;
+  transition-duration: 1s;
+  border-radius: 10px;
+}
+
+.item:hover{
+  width: 120px;
+  height: 120px;
 }
