--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -8,3 +8,12 @@
   width: 150px;
   height: 150px;
 }
+
+.profileCss{
+  transition-duration: 0.5s;
+}
+
+.profileCss:hover{
+  width: 40px;
+  height: 40px;
+}
