--- a/frontend/src/pages/Home/Home.css
+++ b/frontend/src/pages/Home/Home.css
@@ -32,8 +32,10 @@ p {
   margin-right: 5px;
   width: 35px;
   height: 35px;
+  transition-duration: 0.5s;
 }
 
-.profile {
-  visibility: visible;
+.profile:hover{
+  width: 40px;
+  height: 40px;
 }
