--- a/frontend/src/pages/RegulationPage/RegulationPage.css
+++ b/frontend/src/pages/RegulationPage/RegulationPage.css
@@ -158,3 +158,9 @@
   width: 85%;
   color: #ffff;
 }
+.backReseau{
+  transition-duration: 0.5s;
+}
+.backReseau:hover{
+  transform: rotate(-15deg)
+}
