--- a/frontend/src/pages/Utilisateur/Utilisateur.css
+++ b/frontend/src/pages/Utilisateur/Utilisateur.css
@@ -11,7 +11,12 @@
   margin-left: 5px;
   width: 35px;
   height: 35px;
+  transition-duration: 0.5s;
 }
+.backUtilisateur:hover{
+  transform: rotate(-15deg)
+}
+
 
 .profileUtilisateur {
   display: none;
