--- a/frontend/src/pages/Voyageurs/Voyageurs.css
+++ b/frontend/src/pages/Voyageurs/Voyageurs.css
@@ -11,7 +11,13 @@
   margin-left: 5px;
   width: 35px;
   height: 35px;
+  transition-duration: 0.5s;
 }
+.backVoyageurs:hover{
+  transform: rotate(-15deg)
+}
+
+
 
 .profileVoyageurs {
   display: none;
