--- a/frontend/src/pages/Profile/Profile.css
+++ b/frontend/src/pages/Profile/Profile.css
@@ -19,6 +19,11 @@
   margin-left: 5px;
   width: 35px;
   height: 35px;
+  transition-duration: 0.5s;
+}
+
+.backProfile:hover{
+  transform: rotate(-15deg)
 }
 
 .profileProfile {
