--- a/frontend/src/pages/Reseau/Reseau.css
+++ b/frontend/src/pages/Reseau/Reseau.css
@@ -11,7 +11,13 @@
   margin-left: 5px;
   width: 35px;
   height: 35px;
-}
+  transition-duration: 0.5s;
+  }
+  
+  .backReseau:hover{
+    transform: rotate(-15deg)
+  }
+
 
 .profileReseau {
   display: none;
