--- a/frontend/src/pages/Ter/Ter.css
+++ b/frontend/src/pages/Ter/Ter.css
@@ -11,7 +11,12 @@
   margin-left: 5px;
   width: 35px;
   height: 35px;
-}
+  transition-duration: 0.5s;
+  }
+  .backTer:hover{
+    transform: rotate(-15deg)
+  }
+
 
 .profileTer {
   display: none;
