--- a/frontend/src/pages/GareEtConnexions/GareEtConnexions.css
+++ b/frontend/src/pages/GareEtConnexions/GareEtConnexions.css
@@ -10,12 +10,12 @@
   margin-top: 5px;
   margin-left: 5px;
   width: 35px;
-  height: 35px;transition-duration: 0.5s;
+  height: 35px;
+  transition-duration: 0.5s;
 }
-.backGare:hover{
-  transform: rotate(-15deg)
+.backGare:hover {
+  transform: rotate(-15deg);
 }
-
 
 .profileGare {
   display: none;
