--- a/frontend/src/pages/Profile/Profile.css
+++ b/frontend/src/pages/Profile/Profile.css
@@ -22,8 +22,8 @@
   transition-duration: 0.5s;
 }
 
-.backProfile:hover{
-  transform: rotate(-15deg)
+.backProfile:hover {
+  transform: rotate(-15deg);
 }
 
 .profileProfile {
