--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -8,6 +8,18 @@
   width: 20%;
 }
 
+.back {
+  margin-top: 5px;
+  margin-left: 5px;
+  width: 35px;
+  height: 35px;
+  transition-duration: 0.5s;
+}
+
+.back:hover {
+  transform: rotate(-15deg);
+}
+
 .header-logo {
   display: flex;
   align-items: center;
@@ -19,6 +31,48 @@
   display: flex;
   justify-content: right;
   width: 20%;
+}
+
+.profile {
+  margin-top: 5px;
+  margin-right: 5px;
+  width: 35px;
+  height: 35px;
+}
+
+.profile:hover {
+  animation: jello-horizontal 0.9s both;
+}
+
+@keyframes jello-horizontal {
+  0% {
+    -webkit-transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1);
+  }
+  30% {
+    -webkit-transform: scale3d(1.25, 0.75, 1);
+    transform: scale3d(1.25, 0.75, 1);
+  }
+  40% {
+    -webkit-transform: scale3d(0.75, 1.25, 1);
+    transform: scale3d(0.75, 1.25, 1);
+  }
+  50% {
+    -webkit-transform: scale3d(1.15, 0.85, 1);
+    transform: scale3d(1.15, 0.85, 1);
+  }
+  65% {
+    -webkit-transform: scale3d(0.95, 1.05, 1);
+    transform: scale3d(0.95, 1.05, 1);
+  }
+  75% {
+    -webkit-transform: scale3d(1.05, 0.95, 1);
+    transform: scale3d(1.05, 0.95, 1);
+  }
+  100% {
+    -webkit-transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1);
+  }
 }
 
 .logo {
