--- a/frontend/src/pages/Defaults/Defaults.css
+++ b/frontend/src/pages/Defaults/Defaults.css
@@ -20,9 +20,11 @@
 }
 
 .defaults-display {
-  height: 100%;
+  /* height: 100%; */
   width: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: space-between;
+  gap: 50px;
+  overflow: auto;
 }
