firebase, PictureImport jsx and css

--- a/frontend/src/components/PictureImport/PictureImport.css
+++ b/frontend/src/components/PictureImport/PictureImport.css
@@ -1,5 +1,6 @@
 .pictureImport {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-  }
+  color: white;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
