--- a/frontend/src/components/PictureImport/PictureImport.css
+++ b/frontend/src/components/PictureImport/PictureImport.css
@@ -1,6 +1,21 @@
 .pictureImport {
   color: white;
   display: flex;
-  justify-content: center;
-  flex-direction: column;
+  justify-content: space-around;
+}
+
+.Pictures {
+  border-radius: 20rem;
+  background-color: white;
+}
+
+.pictureInput input {
+  color: rgb(213, 43, 30);
+  border-radius: 5rem;
+}
+
+.Percentages {
+  margin-top: 1vh;
+  margin-left: 1vh;
+  color: rgb(213, 43, 30);
 }
