finish css mibil-first

--- a/frontend/src/components/Input/InputPassword.css
+++ b/frontend/src/components/Input/InputPassword.css
@@ -14,7 +14,7 @@
   background-color: white;
   border-radius: 20px;
   padding: 5px;
-  width: 240px;
+  width: 50%;
   align-items: center;
   justify-content: space-between;
   transition-duration: 0.1s;
@@ -26,9 +26,16 @@
   width: 20px;
 }
 .inputPassword {
-  width: 80%;
+  width: 70%;
   padding: 0px;
 }
 .inputPassword:hover {
   outline: 0px solid;
+}
+
+@media (min-width: 768px) {
+  .inputPassword {
+    width: 90%;
+    padding: 0px;
+  }
 }
