--- a/frontend/src/components/Button/Button.css
+++ b/frontend/src/components/Button/Button.css
@@ -5,17 +5,17 @@
 }
 
 button {
-  width: 135px;
-  height: 35px;
   cursor: pointer;
   font-size: small;
   transition-duration: 0.5s;
+  height: 4.5vh;
+  width: 10rem;
 }
 button:hover {
-  width: 160px;
-  height: 42px;
   background-color: rgb(205, 0, 55);
   color: white;
+  height: 6vh;
+  width: 12rem;
 }
 
 .label-text {
