--- a/frontend/src/components/Item/Item.css
+++ b/frontend/src/components/Item/Item.css
@@ -1,11 +1,30 @@
 .item {
-  width: 100px;
+  /* width: 100px; */
   height: 100px;
   transition-duration: 1s;
   border-radius: 10px;
 }
 
 .item:hover {
-  width: 120px;
+  /* width: 120px; */
   height: 120px;
+}
+
+@media (min-width: 768px) {
+  .item {
+    height: 200px;
+  }
+
+  .item:hover {
+    height: 230px;
+  }
+}
+@media (min-width: 968px) {
+  .item {
+    height: 22vh;
+  }
+
+  .item:hover {
+    height: 23vh;
+  }
 }
