--- a/frontend/src/pages/DefaultsUser/DefaultsUser.css
+++ b/frontend/src/pages/DefaultsUser/DefaultsUser.css
@@ -4,7 +4,6 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  color: white;
 }
 
 .fail-container {
@@ -12,8 +11,9 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
   background-color: rgb(0, 17, 43);
+  overflow: auto;
+  gap: 20px;
 }
 
 .backDefaultsUser {
@@ -26,4 +26,83 @@
 
 .profileDefaultsUser {
   display: none;
+}
+.btnCard {
+  display: flex;
+  justify-content: center;
+  margin: 15px;
+}
+.delete-button {
+  color: rgb(213, 43, 30);
+  font-weight: bold;
+  border-radius: 20px 0px 0px 20px;
+  height: 1.5em;
+  width: 8rem;
+}
+.delete-button:hover {
+  background-color: rgb(213, 43, 30);
+  color: white;
+  height: 1.5em;
+  width: 8rem;
+}
+
+.update-button {
+  color: rgb(213, 43, 30);
+  font-weight: bold;
+  border-radius: 0px 20px 20px 0px;
+  height: 1.5em;
+  width: 8rem;
+}
+.update-button:hover {
+  background-color: rgb(255, 182, 18);
+  color: white;
+  height: 1.5em;
+  width: 10rem;
+}
+
+@media (min-width: 768px) {
+  .fail-container {
+    height: 100%;
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-auto-rows: minmax(auto, auto);
+    background-color: rgb(0, 17, 43);
+    overflow: scroll;
+    gap: 20px;
+    padding-top: 10px;
+  }
+  /* .delete-button{
+    color: rgb(213, 43, 30);
+    font-weight: bold;
+    border-radius: 20px 0px 0px 20px ;
+    height: 1.5em;
+  }
+  .delete-button:hover{
+    background-color: rgb(213, 43, 30);
+    color: white;
+    height: 1.5em;
+    width: 8rem;
+  }
+  
+  .update-button{
+    color: rgb(213, 43, 30);
+    font-weight: bold;
+    border-radius: 0px 20px 20px 0px ;
+    height: 1.5em;
+    
+  }
+  .update-button:hover{
+  background-color: rgb( 255,182,18);
+  color: white;
+  height: 1.5em;
+  width: 8rem;
+  } */
+}
+@media (min-width: 968px) {
+  .fail-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: minmax(auto, auto);
+  }
 }
