--- a/frontend/src/pages/GareEtConnexions/GareEtConnexions.css
+++ b/frontend/src/pages/GareEtConnexions/GareEtConnexions.css
@@ -30,6 +30,8 @@ h1 {
 .inputGare {
   color: rgb(60, 55, 50);
   border-radius: 20px;
+  text-align: center;
+  width: 60%;
 }
 
 .textGare {
@@ -67,4 +69,22 @@ h2 {
   color: rgb(213, 43, 30);
   font-weight: bold;
   border-radius: 20px;
+}
+
+.placeButton {
+  display: flex;
+  width: 100%;
+  justify-content: space-around;
+}
+
+@media (min-width: 768px) {
+  .inputGare {
+    width: 300px;
+    height: 35px;
+  }
+  .textGare {
+    width: 35rem;
+    height: 20vh;
+    font-size: medium;
+  }
 }
