--- a/frontend/src/components/Footer/Footer.css
+++ b/frontend/src/components/Footer/Footer.css
@@ -3,8 +3,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-
-  background-color: rgb(161, 0, 107);
+  /* background-color: rgb(161, 0, 107); */
+  background: linear-gradient(rgb(161, 0, 107), rgb(110, 30, 120));
 }
 
 .emergency {
@@ -106,3 +106,8 @@
     transform: scale(1);
   }
 }
+@media (min-width: 768px) {
+  .footer-container {
+    justify-content: space-around;
+  
+}}
