--- a/frontend/src/pages/UpdateUser/UpdateUser.css
+++ b/frontend/src/pages/UpdateUser/UpdateUser.css
@@ -7,12 +7,12 @@
   background-color: rgb(0, 17, 43);
 }
 
-.profile_champ-container {
+/* .profile_champ-container {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   height: 100%;
-}
+} */
 
 h1 {
   margin-top: 5px;
