--- a/frontend/src/pages/GareEtConnexions/GareEtConnexions.css
+++ b/frontend/src/pages/GareEtConnexions/GareEtConnexions.css
@@ -58,11 +58,21 @@ h1 {
   border-radius: 20px;
 }
 
+.imgDefaults {
+  width: 100px;
+  height: 100px;
+}
+
 h2 {
   color: rgb(255, 255, 255);
   font-weight: bold;
   font-size: 18px;
   text-align: center;
+}
+
+.images {
+  width: 70px;
+  height: 70px;
 }
 
 .envoyer {
