--- a/frontend/src/pages/UpdateDefaultsUser/UpdateDefaultsUser.css
+++ b/frontend/src/pages/UpdateDefaultsUser/UpdateDefaultsUser.css
@@ -4,8 +4,17 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  background-color: rgb(0, 17, 43);
 }
 
 .profileUpdateDefaultsUser {
   display: none;
+}
+
+.gare_champ-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  height: 100%;
+  align-items: center;
 }
