--- a/frontend/src/pages/Admin/Admin.css
+++ b/frontend/src/pages/Admin/Admin.css
@@ -7,6 +7,10 @@
   background-color: rgb(0, 17, 43);
 }
 
+.loginAdmin {
+  display: none;
+}
+
 .backAdmin {
   margin-top: 5px;
   margin-left: 5px;
