--- a/frontend/src/pages/Profile/Profile.css
+++ b/frontend/src/pages/Profile/Profile.css
@@ -14,6 +14,11 @@
   height: 100%;
   align-items: center;
 }
+
+.loginProf,
+.admin0Prof {
+  display: none;
+}
 /* 
 .backProfile {
   display: none;
