--- a/frontend/src/pages/UpdateDefaultsUser/UpdateDefaultsUser.css
+++ b/frontend/src/pages/UpdateDefaultsUser/UpdateDefaultsUser.css
@@ -7,7 +7,9 @@
   background-color: rgb(0, 17, 43);
 }
 
-.profileUpdateDefaultsUser {
+.profileUpdateDefaultsUser,
+.loginUpdateDefaultsUser,
+.admin0UpdateDefaultsUser {
   display: none;
 }
 
