--- a/frontend/src/components/DefaultCard/DefaultCard.css
+++ b/frontend/src/components/DefaultCard/DefaultCard.css
@@ -1,10 +1,30 @@
-.defaultCard-container {
+.nontraité-container {
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
   margin-top: 5px;
+  border: 2px solid rgb(235, 0, 0);
+}
+.encours-container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 5px;
+  border: 2px solid rgb(193, 87, 0);
+}
+
+.traité-container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 5px;
+  border: 2px solid rgb(0, 193, 48);
 }
 
 .defaultCard-container ul {
