--- a/frontend/src/pages/UpdateDefaultsUser/UpdateDefaultsUser.css
+++ b/frontend/src/pages/UpdateDefaultsUser/UpdateDefaultsUser.css
@@ -20,3 +20,18 @@
   height: 100%;
   align-items: center;
 }
+
+.stationUpdateOff,
+.trackUpdateOff,
+.terUpdateOff,
+.tgvUpdateOff,
+.latitudeUpdateOff,
+.longitudeUpdateOff,
+.pictureUpdateOff {
+  display: none;
+}
+
+.pictureUpdateOn,
+.imgUpdate {
+  width: 30%;
+}
