--- a/frontend/src/pages/Voyageurs/Voyageurs.css
+++ b/frontend/src/pages/Voyageurs/Voyageurs.css
@@ -36,3 +36,12 @@ h1 {
 .textVoyageurs {
   border-radius: 20px;
 }
+
+.pictureTgvOn {
+  width: 100px;
+  height: 100px;
+}
+
+.pictureTgvOff {
+  display: none;
+}
