--- a/frontend/src/pages/Login/Login.css
+++ b/frontend/src/pages/Login/Login.css
@@ -1,4 +1,4 @@
-.utilisateur-container {
+.login-container {
   width: 100vw;
   height: 100vh;
   display: flex;
@@ -11,7 +11,7 @@
 .logoutLogin,
 .adminLogin,
 .loginLogin,
-.admin0Login {
+.adminOffLogin {
   display: none;
 }
 
@@ -30,7 +30,7 @@
   display: none;
 }
 
-.champ-container {
+.field-container {
   height: 100%;
   background-color: rgb(0, 17, 43);
   display: flex;
@@ -38,7 +38,7 @@
   align-items: center;
 }
 
-.formulaire {
+.form {
   padding-top: 10px;
   display: flex;
   flex-direction: column;
@@ -53,7 +53,7 @@
   justify-content: space-around;
 }
 
-.inputUtilisateur {
+.inputCp {
   border-radius: 20px;
 }
 
@@ -83,7 +83,7 @@
 }
 
 @media (min-width: 768px) {
-  .formulaire {
+  .form {
     padding-top: 10px;
     display: flex;
     flex-direction: row;
@@ -125,7 +125,7 @@
   }
 }
 @media (min-width: 968px) {
-  .formulaire {
+  .form {
     padding-top: 10px;
     justify-content: space-evenly;
     height: 80%;
