--- a/frontend/src/pages/GareEtConnexions/GareEtConnexions.css
+++ b/frontend/src/pages/GareEtConnexions/GareEtConnexions.css
@@ -1,4 +1,4 @@
-.gare-container {
+.station-container {
   width: 100vw;
   height: 100vh;
   display: flex;
@@ -13,7 +13,7 @@
   display: none;
 }
 
-.gare_champ-container {
+.stationField-container {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
@@ -29,14 +29,14 @@ h1 {
   color: rgb(213, 43, 30);
 }
 
-.inputGare {
+.inputStation {
   color: rgb(60, 55, 50);
   border-radius: 20px;
   text-align: center;
   width: 60%;
 }
 
-.textGare {
+.textStation {
   border-radius: 20px;
   padding: 5px;
   font-size: small;
@@ -60,7 +60,7 @@ h1 {
   border-radius: 20px;
 }
 
-.pictureGareOn {
+.pictureStationOn {
   width: 100px;
   height: 100px;
 }
@@ -77,7 +77,7 @@ h2 {
   height: 70px;
 }
 
-.envoyer {
+.sendStation {
   color: rgb(213, 43, 30);
   font-weight: bold;
   border-radius: 20px;
@@ -89,16 +89,16 @@ h2 {
   justify-content: space-around;
 }
 
-.pictureGareOff {
+.pictureStationOff {
   display: none;
 }
 
 @media (min-width: 768px) {
-  .inputGare {
+  .inputStation {
     width: 300px;
     height: 35px;
   }
-  .textGare {
+  .textStation {
     width: 35rem;
     height: 20vh;
     font-size: medium;
