change input to button for upload image, gare et connexion, reseau, ter and voyageurs

--- a/frontend/src/pages/GareEtConnexions/GareEtConnexions.css
+++ b/frontend/src/pages/GareEtConnexions/GareEtConnexions.css
@@ -29,8 +29,8 @@ h1 {
   color: rgb(213, 43, 30);
 }
 
-.inputStation {
-  color: rgb(60, 55, 50);
+.inputStationImg {
+  color: white;
   border-radius: 20px;
   text-align: center;
   width: 60%;
