--- a/frontend/src/pages/Reseau/Reseau.css
+++ b/frontend/src/pages/Reseau/Reseau.css
@@ -28,9 +28,9 @@ h1 {
   color: rgb(213, 43, 30);
 }
 
-.inputReseau {
+.inputReseauImg {
   border-radius: 20px;
-  color: rgb(213, 43, 30);
+  color: white;
 }
 
 .textReseau {
