--- a/frontend/src/pages/Ter/Ter.css
+++ b/frontend/src/pages/Ter/Ter.css
@@ -28,8 +28,8 @@ h1 {
   color: rgb(213, 43, 30);
 }
 
-.inputTer {
-  color: rgb(213, 43, 30);
+.inputTerImg {
+  color: white;
   border-radius: 20px;
 }
 
