--- a/frontend/src/pages/Voyageurs/Voyageurs.css
+++ b/frontend/src/pages/Voyageurs/Voyageurs.css
@@ -28,8 +28,8 @@ h1 {
   color: rgb(213, 43, 30);
 }
 
-.inputVoyageurs {
-  color: rgb(213, 43, 30);
+.inputVoyageursImg {
+  color: white;
   border-radius: 20px;
 }
 
