--- a/frontend/src/pages/GareEtConnexions/GareEtConnexions.css
+++ b/frontend/src/pages/GareEtConnexions/GareEtConnexions.css
@@ -16,9 +16,10 @@
 .stationField-container {
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
   height: 100%;
   align-items: center;
+  overflow: auto;
+  gap: 10px;
 }
 
 h1 {
@@ -61,8 +62,7 @@ h1 {
 }
 
 .pictureStationOn {
-  width: 100px;
-  height: 100px;
+  width: 20%;
 }
 
 h2 {
@@ -91,6 +91,11 @@ h2 {
 
 .pictureStationOff {
   display: none;
+}
+
+.latitudeLongitude {
+  display: flex;
+  width: 100%;
 }
 
 @media (min-width: 768px) {
