--- a/frontend/src/components/DefaultCard/DefaultCard.css
+++ b/frontend/src/components/DefaultCard/DefaultCard.css
@@ -70,7 +70,7 @@
   height: 30%;
 } */
 
-.gareDefaultCardOff,
+.stationDefaultCardOff,
 .tgvDefaultCardOff,
 .terDefaultCardOff,
 .trackDefaultCardOff,
