--- a/frontend/src/pages/DefaultViewAdmin/DefaultViewAdmin.css
+++ b/frontend/src/pages/DefaultViewAdmin/DefaultViewAdmin.css
@@ -1,3 +1,24 @@
+.defaultViewAdmin-container {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  background-color: rgb(0, 17, 43);
+}
+
+.defaultViewAdmin-field-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  height: 100%;
+  align-items: center;
+}
+
+.adminOffUpdateDefaultsViewAdmin {
+  display: none;
+}
+
 .imageViewAdminOn {
   width: 30%;
 }
