--- a/frontend/src/pages/RegulationPage/RegulationPage.css
+++ b/frontend/src/pages/RegulationPage/RegulationPage.css
@@ -19,7 +19,7 @@
   font-style: italic;
 }
 
-.identite-container {
+.identity-container {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -28,7 +28,7 @@
   color: #ffff;
 }
 
-.identite-container h2 {
+.identity-container h2 {
   color: #cd0037;
 }
 
@@ -63,11 +63,11 @@
   color: #ffff;
 }
 
-.identite-container p {
+.identity-container p {
   color: #ffff;
 }
 
-.interactivite-container {
+.interactivity-container {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -75,15 +75,15 @@
   width: 85%;
 }
 
-.interactivite-container h2 {
+.interactivity-container h2 {
   color: #cd0037;
 }
 
-.interactivite-container p {
+.interactivity-container p {
   color: #ffff;
 }
 
-.propriete-container {
+.property-container {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -91,11 +91,11 @@
   width: 85%;
 }
 
-.propriete-container h2 {
+.property-container h2 {
   color: #cd0037;
 }
 
-.liens-container {
+.link-container {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -103,27 +103,27 @@
   width: 85%;
 }
 
-.propriete-container p {
+.property-container p {
   color: #ffff;
 }
 
-.liens-container h2 {
+.link-container h2 {
   color: #cd0037;
 }
 
-.liens-container h3 {
+.link-container h3 {
   color: #cd0037;
 }
 
-.liens-container p {
+.link-container p {
   color: #ffff;
 }
 
-.liens-container span {
+.link-container span {
   color: #ffb612;
 }
 
-.confidentialite-container {
+.privacy-container {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -131,11 +131,11 @@
   width: 85%;
 }
 
-.confidentialite-container h2 {
+.privacy-container h2 {
   color: #cd0037;
 }
 
-.confidentialite-container p {
+.privacy-container p {
   color: #ffff;
 }
 
