--- a/frontend/src/pages/UpdateUser/UpdateUser.css
+++ b/frontend/src/pages/UpdateUser/UpdateUser.css
@@ -8,7 +8,7 @@
 }
 
 .loginUpdateUser,
-.admin0UpdateUser {
+.adminOffUpdateUser {
   display: none;
 }
 
@@ -27,7 +27,7 @@ h1 {
   color: rgb(213, 43, 30);
 }
 
-.envoyer {
+.sendUpdateUser {
   color: rgb(213, 43, 30);
   font-weight: bold;
   border-radius: 20px;
