--- a/frontend/src/pages/DefaultView/DefaultView.css
+++ b/frontend/src/pages/DefaultView/DefaultView.css
@@ -31,3 +31,10 @@
 .geolocViewOff {
   display: none;
 }
+
+.textDefaultView,
+.geolocViewOn {
+  color: white;
+  font-size: 15px;
+  width: 80%;
+}
