--- a/frontend/src/pages/Voyageurs/Voyageurs.css
+++ b/frontend/src/pages/Voyageurs/Voyageurs.css
@@ -38,20 +38,23 @@ h1 {
   width: 80%;
 }
 
-
 .pictureTgvOn {
-height: 100%;
+  height: 100%;
 }
 
 .pictureTgvOff {
   display: none;
 }
 @media (min-width: 900px) {
-  .inputVoyageursImg{width: auto;}
-  .textVoyageurs{height:30vh;
-  width: 400px;}
-  .latitudeLongitude{
-    justify-content:space-evenly;
+  .inputVoyageursImg {
+    width: auto;
+  }
+  .textVoyageurs {
+    height: 30vh;
+    width: 400px;
+  }
+  .latitudeLongitude {
+    justify-content: space-evenly;
   }
   .voyageursField-container {
     display: grid;
@@ -63,7 +66,8 @@ height: 100%;
   h1 {
     grid-column: 1/4;
     grid-row: 1;
-    animation: scale-in-ver-bottom 0.8s cubic-bezier(0.250, 0.460, 0.450, 0.940) 1.9s both;
+    animation: scale-in-ver-bottom 0.8s cubic-bezier(0.25, 0.46, 0.45, 0.94)
+      1.9s both;
   }
   .inputVoyageurOne {
     grid-column: 1;
@@ -89,7 +93,7 @@ height: 100%;
     animation: slide-in-left 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.3s both;
   }
   .pictureDefault {
-    grid-column:3;
+    grid-column: 3;
     grid-row: 4;
     height: 80%;
     display: flex;
@@ -108,42 +112,42 @@ height: 100%;
     grid-row: 6;
     animation: slide-in-left 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.5s both;
   }
-  .lineVoyageurs{
+  .lineVoyageurs {
     grid-column: 2;
     grid-row: 2/5;
     background-color: rgb(213, 43, 30);
     width: 2px;
     height: 100%;
     margin: auto;
-    animation: scale-in-ver-center 0.8s cubic-bezier(0.250, 0.460, 0.450, 0.940) 1.2s both;
+    animation: scale-in-ver-center 0.8s cubic-bezier(0.25, 0.46, 0.45, 0.94)
+      1.2s both;
   }
   @keyframes scale-in-ver-bottom {
     0% {
       -webkit-transform: scaleY(0);
-              transform: scaleY(0);
+      transform: scaleY(0);
       -webkit-transform-origin: 0% 100%;
-              transform-origin: 0% 100%;
+      transform-origin: 0% 100%;
       opacity: 1;
     }
     100% {
       -webkit-transform: scaleY(1);
-              transform: scaleY(1);
+      transform: scaleY(1);
       -webkit-transform-origin: 0% 100%;
-              transform-origin: 0% 100%;
+      transform-origin: 0% 100%;
       opacity: 1;
     }
   }
-@keyframes scale-in-ver-center {
-  0% {
-    -webkit-transform: scaleY(0);
-            transform: scaleY(0);
-    opacity: 1;
+  @keyframes scale-in-ver-center {
+    0% {
+      -webkit-transform: scaleY(0);
+      transform: scaleY(0);
+      opacity: 1;
+    }
+    100% {
+      -webkit-transform: scaleY(1);
+      transform: scaleY(1);
+      opacity: 1;
+    }
   }
-  100% {
-    -webkit-transform: scaleY(1);
-            transform: scaleY(1);
-    opacity: 1;
-  }
-}
-
 }
