--- a/frontend/src/pages/Voyageurs/Voyageurs.css
+++ b/frontend/src/pages/Voyageurs/Voyageurs.css
@@ -112,7 +112,7 @@ h1 {
     grid-row: 6;
     animation: slide-in-left 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.5s both;
   }
-  .lineVoyageurs {
+  .line {
     grid-column: 2;
     grid-row: 2/5;
     background-color: rgb(213, 43, 30);
